[gd_scene load_steps=3 format=3 uid="uid://menu_state"]

[ext_resource type="Script" path="res://scripts/states/menu_state.gd" id="1_menu"]
[ext_resource type="VideoStream" path="res://assets/video/menu_background.ogv" id="2_video"]

[node name="MenuState" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_menu")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.02, 0.02, 0.05, 1)

[node name="VideoBackground" type="VideoStreamPlayer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
stream = ExtResource("2_video")
autoplay = true
expand = true
loop = true

[node name="VideoOverlay" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.02, 0.02, 0.05, 0.4)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Title" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0.898039, 1, 1)
theme_override_font_sizes/font_size = 72
text = "TYPER3000"
horizontal_alignment = 1

[node name="Spacer" type="Control" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="StartPrompt" type="RichTextLabel" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
bbcode_enabled = true
text = "START"
fit_content = true
scroll_active = false
theme_override_font_sizes/normal_font_size = 32

[node name="VersusPrompt" type="RichTextLabel" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
bbcode_enabled = true
text = "VERSUS"
fit_content = true
scroll_active = false
theme_override_font_sizes/normal_font_size = 32

[node name="SettingsPrompt" type="RichTextLabel" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
bbcode_enabled = true
text = "SETTINGS"
fit_content = true
scroll_active = false
theme_override_font_sizes/normal_font_size = 32

[node name="QuitPrompt" type="RichTextLabel" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
bbcode_enabled = true
text = "QUIT"
fit_content = true
scroll_active = false
theme_override_font_sizes/normal_font_size = 32

[node name="Spacer2" type="Control" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="TypedDisplay" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0.898039, 1, 1)
theme_override_font_sizes/font_size = 36
text = ""
horizontal_alignment = 1

[node name="Instructions" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.333333, 0.333333, 0.4, 1)
theme_override_font_sizes/font_size = 14
text = "F3 = Toggle Debug"
horizontal_alignment = 1
